<resources>
    <string name="app_name">Interfete</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_linear">LinearActivity</string>
    <string name="title_activity_absolute">AbsoluteActivity</string>
    <string name="absolute_btn1">Button1</string>
    <string name="absolute_btn2">Button2</string>
    <string name="inbox">Inbox</string>
    <string name="email">Email</string>
    <string name="delete">Delete</string>
    <string name="rate">Rate</string>
    <string name="send">Send</string>
    <string name="drafts">Drafts</string>
    <string name="error">Error</string>
    <string name="openDrawer">open</string>
    <string name="closeDrawer">close</string>

</resources>
